# blog_os

./: Cargo.toml  README.md  x86_64-blog_os.json
.cargo/: config
.obsidian/: workspace
src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  mod.rs
