[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.7",features = ["map_physical_memory"]}
x86_64 = {version = "0.14.10", features=["abi_x86_interrupt"]}
volatile = "0.4.5"
lazy_static = {version = "1.4.0",features=["spin_no_std"]}
spin = "0.9.4"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.1"
futures-util = {version="0.3.0",features=["alloc"],default-features = false}
crossbeam-queue = {version="0.3.5",features=["alloc"],default-features = false}
conquer-once = {version="0.3.2",default-features = false}







[profile.dev]
panic = "abort"



[profile.release]
panic = "abort"



[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio","-drive", "format=raw,file={}"]



